--- a/Css/Components/title.css
+++ b/Css/Components/title.css
@@ -2,6 +2,9 @@ h1 {
     font-family: 'Press Start 2P' ,sans-serif;
     font-size: 40px ;
     color: #BA1F33;
-    text-shadow: 5px 5px 0 #2D3142;
+    text-shadow: 5px 5px 0 #000000;
+    
+    
+    
 
 }
