--- a/Css/Components/banner.css
+++ b/Css/Components/banner.css
@@ -14,6 +14,13 @@
     flex-direction: column;
     width: 630px;
 
+
+}
+.banner .box {
+    margin-bottom: 40px;
+    margin-top: 115px;
+    margin-left: 30px;
+    margin-right: 70px;
 }
 
 .banner .navigation {
