--- a/Css/Components/banner.css
+++ b/Css/Components/banner.css
@@ -1,11 +1,12 @@
 .banner {
+    box-sizing: border-box;
     background-image: url(../../assets/img/Photo.png);
     background-repeat: no-repeat;
     background-size: 100%;
     height: 800px;
     border-bottom: 4mm ridge #000;
-
-
+    padding-top: 30px;
+    padding-left: 30px;
 
 }
 
@@ -18,9 +19,7 @@
 }
 .banner .box {
     margin-bottom: 40px;
-    margin-top: 115px;
-    margin-left: 30px;
-    margin-right: 70px;
+    
 }
 
 .banner .navigation {
