--- a/Css/Components/banner.css
+++ b/Css/Components/banner.css
@@ -1,6 +1,6 @@
 .banner {
     box-sizing: border-box;
-    background-image: url(../../assets/img/Photo.png);
+    background-image: url(../../assets/Photo.png);
     background-repeat: no-repeat;
     background-size: 100%;
     height: 800px;
