--- a/Css/Components/main-title.css
+++ b/Css/Components/main-title.css
@@ -1,4 +1,4 @@
-.title {
+.main-title {
     font-family: 'Press Start 2P', sans-serif;
     font-size: 40px;
     color: #BA1F33;
@@ -9,7 +9,7 @@
 
 }
 
-.title.-second{
+.main-title.-second{
 color: #fff;
 text-shadow: none;
 text-align: center;
