--- a/Css/Components/progress-bar.css
+++ b/Css/Components/progress-bar.css
@@ -1,14 +1,19 @@
 .progress-bar {
     box-sizing: border-box;
-    background-color: #fff;
+    background-color: #ffffff;
     border: 5px solid #000;
     height: 40px;
-
 }
 
-
 .progress-bar::-webkit-progress-bar,
-.progress-bar::-moz-progress-bar{
+.progress-bar::-moz-progress-bar {
+    background-color: #ffffff;
+}
+
+.progress-bar::-webkit-progress-value {
     background-color: #4F5D75;
 }
 
+.progress-bar::-moz-progress-value {
+    background-color: #4F5D75;
+}
