--- a/Css/Components/skill-tec.css
+++ b/Css/Components/skill-tec.css
@@ -3,6 +3,7 @@
     font-family: 'Press Start 2P', sans-serif;
     color: #fff;
     font-size: 25px;
+     justify-content: center;
 }
 
 .skill-tec .icon{
