--- a/Css/Components/Components.css
+++ b/Css/Components/Components.css
@@ -107,13 +107,17 @@
 
 .gitbutton img {
     height: 200px;
+    
 }
 
 .gitbutton-container {
     display: flex;
     justify-content: center;
     margin-top: 20px;
+    
+    
 }
+
 /* #endregion */
 
 /* #region header */
@@ -139,15 +143,17 @@
     text-shadow: none;
     text-align: center;
     margin-bottom: 20px;
+    text-shadow: 4px 4px 0 #000000;
+    
 }
 /* #endregion */
 
 /* #region subtitle */
 .subtitle {
     font-size: 30px;
-    text-shadow: 4px 4px 0 #000000;
     font-family: 'Press Start 2P', sans-serif;
     color: #FFFFFF;
+    text-shadow: 4px 4px 0 #000000;
 
 }
 /* #endregion */
@@ -183,7 +189,8 @@ progress::-webkit-progress-value {
 
 /* #region section */
 .section {
-    background-color: #BA1F33;
+    background-color: #2D3142;
+
     padding-top: 50px;
     padding-bottom: 100px;
     border-bottom: 4mm ridge #4C5B84;
@@ -192,11 +199,31 @@ progress::-webkit-progress-value {
 
 /* #region sectionproject */
 .section-pro {
-    background-color: #2D3142;
+   
+    background-color: #f1174d;
     padding-top: 50px;
     padding-bottom: 100px;
     border-bottom: 4mm ridge #4C5B84;
+    font-size: 20px;
+    color: #fafafa;
 }
+
+.subtitle-pro {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    font-family: 'Press Start 2P', sans-serif;
+    color: #FFFFFF;
+    text-shadow: 4px 4px 0 #000000;
+    gap: 10px; /* Ajuste o espaço entre os elementos se necessário */
+}
+
+.subtitle-pro i {
+    font-size: 30px; /* Ajuste o tamanho do ícone conforme necessário */
+}
+
+ 
 /* #endregion */
 
 /* #region media-queries */
@@ -297,3 +324,5 @@ progress::-webkit-progress-value {
     }
 }
 /* #endregion */
+
+
