--- a/Css/Components/Components.css
+++ b/Css/Components/Components.css
@@ -197,7 +197,7 @@ progress::-webkit-progress-value {
 }
 /* #endregion */
 
-/* #region sectionproject */
+/* #region sectionProject */
 .section-pro {
    
     background-color: #f1174d;
@@ -227,7 +227,7 @@ progress::-webkit-progress-value {
 /* #endregion */
 
 
-/* #region sectionabout*/
+/* #region sectionAbout*/
 .textsobre {
     text-align: justify;
     margin: 0 auto; 
@@ -242,6 +242,74 @@ progress::-webkit-progress-value {
 
 
 /* #endregion */
+
+/* #region sectionContact*/
+.section-contatos {
+    background-color: #f1174d; 
+    padding: 40px;
+    text-align: center;
+}
+
+.section-contatos h2 {
+    font-family: 'Press Start 2P', cursive;
+    color: #fafafa;
+    margin-bottom: 20px;
+    
+}
+
+.contact-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%; 
+    max-width: 800px; 
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #444;
+    border-radius: 10px;
+}
+
+.contact-form label {
+    font-family: 'Press Start 2P', cursive;
+    color: #fafafa;
+    margin-top: 10px;
+    align-self: flex-start;
+}
+
+.contact-form input,
+.contact-form textarea {
+    width: 100%;
+    padding: 10px;
+    margin: 10px ;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-family: 'Fira Code', monospace;
+    font-size: 18px; 
+}
+
+.contact-form button {
+    width: 100%;
+    padding: 15px;
+    margin-top: 20px;
+    background-color: #c1272d; 
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 18px; 
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.contact-form button:hover {
+    background-color: #a21f23; 
+
+}
+
+/* #endregion */
+
+
 
 /* #region media-queries */
 /* Estilos para telas maiores (desktop) */
@@ -340,6 +408,4 @@ progress::-webkit-progress-value {
         font-size: 16px;
     }
 }
-/* #endregion */
-
-
+/* #endregion */  
