--- a/Css/Components/Components.css
+++ b/Css/Components/Components.css
@@ -5,7 +5,7 @@
     gap: 60px;
     font-family: 'Press Start 2P', sans-serif;
     color: #fafafa;
-    font-size: 25px;
+    font-size: 1,56rem;
     justify-items: center;
     align-items: start;
     
@@ -92,7 +92,7 @@
     box-shadow: 5px 5px 0px #4F5D75;
     padding: 18px 20px;
     transition: transform 100ms linear;
-    font-size: 20px;
+    font-size: 1,25rem;
     color: #fafafa;
     text-decoration: none;
 }
@@ -144,7 +144,7 @@
 /* #region main-title */
 .main-title {
     font-family: 'Press Start 2P', sans-serif;
-    font-size: 40px;
+    font-size: 2.5rem;
     color: #BA1F33;
     text-shadow: 5px 5px 0 #000000;
 }
@@ -161,7 +161,7 @@
 
 /* #region subtitle */
 .subtitle {
-    font-size: 30px;
+    font-size: 1,90rem;
     font-family: 'Press Start 2P', sans-serif;
     color: #FFFFFF;
     text-shadow: 4px 4px 0 #000000;
@@ -188,7 +188,7 @@
     padding-top: 50px;
     padding-bottom: 100px;
     border-bottom: 4mm ridge #4C5B84;
-    font-size: 20px;
+    font-size: 1,25rem;
     color: #fafafa;
 }
 
@@ -196,7 +196,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 30px;
+    font-size: 1,90rem;
     font-family: 'Press Start 2P', sans-serif;
     color: #FFFFFF;
     text-shadow: 4px 4px 0 #000000;
@@ -204,7 +204,7 @@
 }
 
 .subtitle-pro i {
-    font-size: 30px; 
+    font-size: 1,90rem; 
 }
 
  
@@ -217,7 +217,7 @@
     margin: 0 auto; 
     max-width: 800px; 
     font-family: 'Press Start 2P', sans-serif;
-    font-size: 16px; 
+    font-size: 1rem; 
     line-height: 1.5; 
     color: #fafafa; 
     padding: 20px; 
@@ -269,7 +269,7 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     font-family: 'Fira Code', monospace;
-    font-size: 18px; 
+    font-size: 1,125rem; 
 }
 
 .contact-form button {
@@ -281,7 +281,7 @@
     border: none;
     border-radius: 5px;
     font-family: 'Press Start 2P', cursive;
-    font-size: 18px; 
+    font-size: 1,125rem; 
     cursor: pointer;
     transition: background-color 0.3s;
 }
@@ -296,102 +296,3 @@
 
 
 /* #region media-queries */
-/* Estilos para telas maiores (desktop) */
-@media (min-width: 1024px) {
-    .banner {
-        height: 800px;
-        background-size: cover;
-    }
-
-    .banner .wrapper {
-        width: 630px;
-    }
-}
-
-/* Estilos para tablets */
-@media (min-width: 768px) and (max-width: 1023px) {
-    .banner {
-        height: 600px;
-        background-size: cover;
-    }
-
-    .banner .wrapper {
-        width: 80%;
-        padding: 20px;
-    }
-
-    .main-title {
-        font-size: 30px;
-    }
-
-    .subtitle {
-        font-size: 24px;
-    }
-}
-
-/* Estilos para celulares */
-@media (max-width: 767px) {
-    .header {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
-
-    .header img {
-        margin-bottom: 20px;
-    }
-
-    .header nav {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-    }
-
-    .banner {
-        height: 400px;
-        background-size: cover;
-        padding: 20px;
-    }
-
-    .banner .wrapper {
-        width: 100%;
-        padding: 10px;
-    }
-
-    .banner .box {
-        padding: 20px;
-    }
-
-    .main-title {
-        font-size: 24px;
-    }
-
-    .subtitle {
-        font-size: 18px;
-    }
-
-    .section, .section-pro {
-        padding: 20px;
-    }
-
-    .skill-tec {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .skill-tec .icon {
-        margin: 10px 0;
-    }
-
-    .action {
-        margin: 10px 0;
-    }
-
-    .button {
-        padding: 10px;
-        font-size: 16px;
-    }
-}
-
-
-/* #endregion */  
