--- a/Css/Components/Components.css
+++ b/Css/Components/Components.css
@@ -48,7 +48,8 @@
     box-sizing: border-box;
     background-image: url(../../assets/Photo3.png);
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
+    background-position: center;
     height: 800px;
     border-bottom: 4mm ridge #000;
 }
@@ -59,6 +60,9 @@
     width: 630px;
     padding-top: 30px;
     padding-left: 30px;
+    max-width: 100vw;
+    overflow-x: hidden;
+
 }
 
 .banner .box {
@@ -70,6 +74,10 @@
     justify-content: space-around;
 }
 /* #endregion */
+html, body {
+    overflow-x: hidden;
+    width: 100%;
+}
 
 /* #region Box */
 .box {
@@ -127,7 +135,7 @@
     justify-content: space-between;
     background-color: #2D3142;
     border-bottom: 10px solid #4F5D75;
-    padding: 10px 20px;
+    padding: 1% 0.5%;
 }
 /* #endregion */
 
@@ -246,8 +254,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%; 
-    max-width: 800px; 
+    width: 40%; 
+    max-width: 100%; 
     margin: 0 auto;
     padding: 20px;
     background-color: #444;
